# theremini_ros

./: README.md
theremini_description/: CMakeLists.txt  package.xml
theremini_description/urdf/: boxer_theremin.urdf.xacro  theremini.urdf.xacro
theremini_player/: CMakeLists.txt  package.xml  setup.py
theremini_player/config/: jingle_bells.yaml  theremin.yaml
theremini_player/launch/: calibration.launch  random.launch  song.launch
theremini_player/scripts/: calibrate  random  song
theremini_player/src/theremini_player/: antenna_control.py  calibrator.py  random_player.py  song_player.py
