<?xml version="1.0"?>
<package format="2">
  <name>theremini_player</name>
  <version>0.0.0</version>
  <description>The theremini_player package</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>theremini_description</exec_depend>

  <export>
  </export>
</package>
